tests/snapshots/module__histograms_basic_module_load.snap
---
source: tests/module.rs
expression: module_file
---
name:
  - 109
  - 111
  - 100
  - 80
  - 117
  - 98
  - 108
  - 105
  - 99
  - 86
  - 97
  - 114
  - 115
tokens:
  source_file: "./tests/data/vb6-code/Histograms-basic/mod_PublicVars.bas"
  tokens:
    - - Attribute
      - AttributeKeyword
    - - " "
      - Whitespace
    - - VB_Name
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - "\"modPublicVars\""
      - StringLiteral
    - - "\r\n"
      - Newline
    - - "'***************************************************************************"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "'Copyright 2018 by Tanner Helland"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "' www.tannerhelland.com"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "'"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "'Documentation for this project can be found at https://tannerhelland.com/code/"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "'"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "'The source code in this project is licensed under a Simplified BSD license."
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "' For more information, please review LICENSE.md at https://github.com/tannerhelland/thdc-code/"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "'"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "'If you find this code useful, please consider a small donation to https://www.paypal.me/TannerHelland"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "'"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "'***************************************************************************"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "\r\n"
      - Newline
    - - "'A couple constants to simplify tracking various variables"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - Public
      - PublicKeyword
    - - " "
      - Whitespace
    - - Const
      - ConstKeyword
    - - " "
      - Whitespace
    - - DRAWMETHOD_LUMINANCE
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - "3"
      - IntegerLiteral
    - - "\r\n"
      - Newline
    - - Public
      - PublicKeyword
    - - " "
      - Whitespace
    - - Const
      - ConstKeyword
    - - " "
      - Whitespace
    - - DRAWMETHOD_BARS
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - "0"
      - IntegerLiteral
    - - "\r\n"
      - Newline
    - - "\r\n"
      - Newline
    - - "'Used to track the last options we used on the histogram form"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - Public
      - PublicKeyword
    - - " "
      - Whitespace
    - - lastHistSource
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - lastHistMethod
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - "\r\n"
      - Newline
    - - "\r\n"
      - Newline
    - - "'We'll use this routine only to draw the gradient below the histogram window"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "'(like Photoshop does).  This code is old, but it works ;)"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - Public
      - PublicKeyword
    - - " "
      - Whitespace
    - - Sub
      - SubKeyword
    - - " "
      - Whitespace
    - - DrawGradient
      - Identifier
    - - (
      - LeftParenthesis
    - - ByRef
      - ByRefKeyword
    - - " "
      - Whitespace
    - - DstObject
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - PictureBox
      - Identifier
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - ByVal
      - ByValKeyword
    - - " "
      - Whitespace
    - - Color1
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - ByVal
      - ByValKeyword
    - - " "
      - Whitespace
    - - Color2
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - )
      - RightParenthesis
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "'RGB() variables for each color"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - Dim
      - DimKeyword
    - - " "
      - Whitespace
    - - r
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - g
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - b
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - Dim
      - DimKeyword
    - - " "
      - Whitespace
    - - R2
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - G2
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - B2
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "'Extract the r,g,b values from the colors passed by the user"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - r
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - Color1
      - Identifier
    - - " "
      - Whitespace
    - - Mod
      - ModKeyword
    - - " "
      - Whitespace
    - - "256"
      - IntegerLiteral
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - g
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - (
      - LeftParenthesis
    - - Color1
      - Identifier
    - - " "
      - Whitespace
    - - "\\"
      - BackwardSlashOperator
    - - " "
      - Whitespace
    - - "256"
      - IntegerLiteral
    - - )
      - RightParenthesis
    - - " "
      - Whitespace
    - - And
      - AndKeyword
    - - " "
      - Whitespace
    - - "255"
      - IntegerLiteral
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - b
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - (
      - LeftParenthesis
    - - Color1
      - Identifier
    - - " "
      - Whitespace
    - - "\\"
      - BackwardSlashOperator
    - - " "
      - Whitespace
    - - "65536"
      - IntegerLiteral
    - - )
      - RightParenthesis
    - - " "
      - Whitespace
    - - And
      - AndKeyword
    - - " "
      - Whitespace
    - - "255"
      - IntegerLiteral
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - R2
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - Color2
      - Identifier
    - - " "
      - Whitespace
    - - Mod
      - ModKeyword
    - - " "
      - Whitespace
    - - "256"
      - IntegerLiteral
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - G2
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - (
      - LeftParenthesis
    - - Color2
      - Identifier
    - - " "
      - Whitespace
    - - "\\"
      - BackwardSlashOperator
    - - " "
      - Whitespace
    - - "256"
      - IntegerLiteral
    - - )
      - RightParenthesis
    - - " "
      - Whitespace
    - - And
      - AndKeyword
    - - " "
      - Whitespace
    - - "255"
      - IntegerLiteral
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - B2
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - (
      - LeftParenthesis
    - - Color2
      - Identifier
    - - " "
      - Whitespace
    - - "\\"
      - BackwardSlashOperator
    - - " "
      - Whitespace
    - - "65536"
      - IntegerLiteral
    - - )
      - RightParenthesis
    - - " "
      - Whitespace
    - - And
      - AndKeyword
    - - " "
      - Whitespace
    - - "255"
      - IntegerLiteral
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "'Calculation variables for the gradiency"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - Dim
      - DimKeyword
    - - " "
      - Whitespace
    - - VR
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Single
      - SingleKeyword
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - VG
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Single
      - SingleKeyword
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - VB
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Single
      - SingleKeyword
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "'Size of the picture box we'll be drawing to"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - Dim
      - DimKeyword
    - - " "
      - Whitespace
    - - iWidth
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - iHeight
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - iWidth
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - DstObject
      - Identifier
    - - "."
      - PeriodOperator
    - - ScaleWidth
      - Identifier
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - iHeight
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - DstObject
      - Identifier
    - - "."
      - PeriodOperator
    - - ScaleHeight
      - Identifier
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "'Here, create a calculation variable for determining the step between"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "'each level of the gradient"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - VR
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - Abs
      - Identifier
    - - (
      - LeftParenthesis
    - - r
      - Identifier
    - - " "
      - Whitespace
    - - "-"
      - SubtractionOperator
    - - " "
      - Whitespace
    - - R2
      - Identifier
    - - )
      - RightParenthesis
    - - " "
      - Whitespace
    - - /
      - DivisionOperator
    - - " "
      - Whitespace
    - - iWidth
      - Identifier
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - VG
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - Abs
      - Identifier
    - - (
      - LeftParenthesis
    - - g
      - Identifier
    - - " "
      - Whitespace
    - - "-"
      - SubtractionOperator
    - - " "
      - Whitespace
    - - G2
      - Identifier
    - - )
      - RightParenthesis
    - - " "
      - Whitespace
    - - /
      - DivisionOperator
    - - " "
      - Whitespace
    - - iWidth
      - Identifier
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - VB
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - Abs
      - Identifier
    - - (
      - LeftParenthesis
    - - b
      - Identifier
    - - " "
      - Whitespace
    - - "-"
      - SubtractionOperator
    - - " "
      - Whitespace
    - - B2
      - Identifier
    - - )
      - RightParenthesis
    - - " "
      - Whitespace
    - - /
      - DivisionOperator
    - - " "
      - Whitespace
    - - iWidth
      - Identifier
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "'If the second value is lower then the first value, make the step negative"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - If
      - IfKeyword
    - - " "
      - Whitespace
    - - R2
      - Identifier
    - - " "
      - Whitespace
    - - "<"
      - LessThanOperator
    - - " "
      - Whitespace
    - - r
      - Identifier
    - - " "
      - Whitespace
    - - Then
      - ThenKeyword
    - - " "
      - Whitespace
    - - VR
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - "-"
      - SubtractionOperator
    - - VR
      - Identifier
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - If
      - IfKeyword
    - - " "
      - Whitespace
    - - G2
      - Identifier
    - - " "
      - Whitespace
    - - "<"
      - LessThanOperator
    - - " "
      - Whitespace
    - - g
      - Identifier
    - - " "
      - Whitespace
    - - Then
      - ThenKeyword
    - - " "
      - Whitespace
    - - VG
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - "-"
      - SubtractionOperator
    - - VG
      - Identifier
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - If
      - IfKeyword
    - - " "
      - Whitespace
    - - B2
      - Identifier
    - - " "
      - Whitespace
    - - "<"
      - LessThanOperator
    - - " "
      - Whitespace
    - - b
      - Identifier
    - - " "
      - Whitespace
    - - Then
      - ThenKeyword
    - - " "
      - Whitespace
    - - VB
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - "-"
      - SubtractionOperator
    - - VB
      - Identifier
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "'Last, run a loop through the width of the picture box, incrementing the color as"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - "'we go (thus creating a gradient effect)"
      - EndOfLineComment
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - Dim
      - DimKeyword
    - - " "
      - Whitespace
    - - x
      - Identifier
    - - " "
      - Whitespace
    - - As
      - AsKeyword
    - - " "
      - Whitespace
    - - Long
      - LongKeyword
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - For
      - ForKeyword
    - - " "
      - Whitespace
    - - x
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - "0"
      - IntegerLiteral
    - - " "
      - Whitespace
    - - To
      - ToKeyword
    - - " "
      - Whitespace
    - - iWidth
      - Identifier
    - - "\r\n"
      - Newline
    - - "        "
      - Whitespace
    - - R2
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - r
      - Identifier
    - - " "
      - Whitespace
    - - +
      - AdditionOperator
    - - " "
      - Whitespace
    - - VR
      - Identifier
    - - " "
      - Whitespace
    - - "*"
      - MultiplicationOperator
    - - " "
      - Whitespace
    - - x
      - Identifier
    - - "\r\n"
      - Newline
    - - "        "
      - Whitespace
    - - G2
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - g
      - Identifier
    - - " "
      - Whitespace
    - - +
      - AdditionOperator
    - - " "
      - Whitespace
    - - VG
      - Identifier
    - - " "
      - Whitespace
    - - "*"
      - MultiplicationOperator
    - - " "
      - Whitespace
    - - x
      - Identifier
    - - "\r\n"
      - Newline
    - - "        "
      - Whitespace
    - - B2
      - Identifier
    - - " "
      - Whitespace
    - - "="
      - EqualityOperator
    - - " "
      - Whitespace
    - - b
      - Identifier
    - - " "
      - Whitespace
    - - +
      - AdditionOperator
    - - " "
      - Whitespace
    - - VB
      - Identifier
    - - " "
      - Whitespace
    - - "*"
      - MultiplicationOperator
    - - " "
      - Whitespace
    - - x
      - Identifier
    - - "\r\n"
      - Newline
    - - "        "
      - Whitespace
    - - DstObject
      - Identifier
    - - "."
      - PeriodOperator
    - - Line
      - LineKeyword
    - - " "
      - Whitespace
    - - (
      - LeftParenthesis
    - - x
      - Identifier
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - "0"
      - IntegerLiteral
    - - )
      - RightParenthesis
    - - "-"
      - SubtractionOperator
    - - (
      - LeftParenthesis
    - - x
      - Identifier
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - iHeight
      - Identifier
    - - )
      - RightParenthesis
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - RGB
      - Identifier
    - - (
      - LeftParenthesis
    - - R2
      - Identifier
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - G2
      - Identifier
    - - ","
      - Comma
    - - " "
      - Whitespace
    - - B2
      - Identifier
    - - )
      - RightParenthesis
    - - "\r\n"
      - Newline
    - - "    "
      - Whitespace
    - - Next
      - NextKeyword
    - - " "
      - Whitespace
    - - x
      - Identifier
    - - "\r\n"
      - Newline
    - - End
      - EndKeyword
    - - " "
      - Whitespace
    - - Sub
      - SubKeyword
    - - "\r\n"
      - Newline
  offset: 0
