tests/snapshots/module__levels_effect_module_load.snap
---
source: tests/module.rs
expression: module_file
---
name:
  - 109
  - 111
  - 100
  - 80
  - 117
  - 98
  - 108
  - 105
  - 99
  - 86
  - 97
  - 114
  - 115
tokens:
  - - "'A couple constants to simplify tracking various variables"
    - Comment
  - - "\r\n"
    - Newline
  - - Public
    - PublicKeyword
  - - " "
    - Whitespace
  - - Const
    - ConstKeyword
  - - " "
    - Whitespace
  - - DRAWMETHOD_LUMINANCE
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - "3"
    - Number
  - - "\r\n"
    - Newline
  - - Public
    - PublicKeyword
  - - " "
    - Whitespace
  - - Const
    - ConstKeyword
  - - " "
    - Whitespace
  - - DRAWMETHOD_BARS
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - "0"
    - Number
  - - "\r\n"
    - Newline
  - - "\r\n"
    - Newline
  - - "'Used to track the last options we used on the histogram form"
    - Comment
  - - "\r\n"
    - Newline
  - - Public
    - PublicKeyword
  - - " "
    - Whitespace
  - - lastHistSource
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - lastHistMethod
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - "\r\n"
    - Newline
  - - "\r\n"
    - Newline
  - - "\r\n"
    - Newline
  - - "'We'll use this routine only to draw the gradient below the histogram window"
    - Comment
  - - "\r\n"
    - Newline
  - - "'(like Photoshop does).  This code is old, but it works ;)"
    - Comment
  - - "\r\n"
    - Newline
  - - Public
    - PublicKeyword
  - - " "
    - Whitespace
  - - Sub
    - SubKeyword
  - - " "
    - Whitespace
  - - DrawGradient
    - Identifier
  - - (
    - LeftParentheses
  - - ByRef
    - ByRefKeyword
  - - " "
    - Whitespace
  - - DstObject
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - PictureBox
    - Identifier
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - ByVal
    - ByValKeyword
  - - " "
    - Whitespace
  - - Color1
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - ByVal
    - ByValKeyword
  - - " "
    - Whitespace
  - - Color2
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - )
    - RightParentheses
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "'RGB() variables for each color"
    - Comment
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - Dim
    - DimKeyword
  - - " "
    - Whitespace
  - - R
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - G
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - B
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - Dim
    - DimKeyword
  - - " "
    - Whitespace
  - - R2
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - G2
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - B2
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "'Extract the r,g,b values from the colors passed by the user"
    - Comment
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - R
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - Color1
    - Identifier
  - - " "
    - Whitespace
  - - Mod
    - ModKeyword
  - - " "
    - Whitespace
  - - "256"
    - Number
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - G
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - (
    - LeftParentheses
  - - Color1
    - Identifier
  - - " "
    - Whitespace
  - - "\\"
    - BackwardSlashOperator
  - - " "
    - Whitespace
  - - "256"
    - Number
  - - )
    - RightParentheses
  - - " "
    - Whitespace
  - - And
    - AndKeyword
  - - " "
    - Whitespace
  - - "255"
    - Number
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - B
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - (
    - LeftParentheses
  - - Color1
    - Identifier
  - - " "
    - Whitespace
  - - "\\"
    - BackwardSlashOperator
  - - " "
    - Whitespace
  - - "65536"
    - Number
  - - )
    - RightParentheses
  - - " "
    - Whitespace
  - - And
    - AndKeyword
  - - " "
    - Whitespace
  - - "255"
    - Number
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - R2
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - Color2
    - Identifier
  - - " "
    - Whitespace
  - - Mod
    - ModKeyword
  - - " "
    - Whitespace
  - - "256"
    - Number
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - G2
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - (
    - LeftParentheses
  - - Color2
    - Identifier
  - - " "
    - Whitespace
  - - "\\"
    - BackwardSlashOperator
  - - " "
    - Whitespace
  - - "256"
    - Number
  - - )
    - RightParentheses
  - - " "
    - Whitespace
  - - And
    - AndKeyword
  - - " "
    - Whitespace
  - - "255"
    - Number
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - B2
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - (
    - LeftParentheses
  - - Color2
    - Identifier
  - - " "
    - Whitespace
  - - "\\"
    - BackwardSlashOperator
  - - " "
    - Whitespace
  - - "65536"
    - Number
  - - )
    - RightParentheses
  - - " "
    - Whitespace
  - - And
    - AndKeyword
  - - " "
    - Whitespace
  - - "255"
    - Number
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "'Calculation variables for the gradiency"
    - Comment
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - Dim
    - DimKeyword
  - - " "
    - Whitespace
  - - VR
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Single
    - SingleKeyword
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - VG
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Single
    - SingleKeyword
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - VB
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Single
    - SingleKeyword
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "'Size of the picture box we'll be drawing to"
    - Comment
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - Dim
    - DimKeyword
  - - " "
    - Whitespace
  - - iWidth
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - iHeight
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - iWidth
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - DstObject
    - Identifier
  - - "."
    - PeriodOperator
  - - ScaleWidth
    - Identifier
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - iHeight
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - DstObject
    - Identifier
  - - "."
    - PeriodOperator
  - - ScaleHeight
    - Identifier
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "'Here, create a calculation variable for determining the step between"
    - Comment
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "'each level of the gradient"
    - Comment
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - VR
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - Abs
    - Identifier
  - - (
    - LeftParentheses
  - - R
    - Identifier
  - - " "
    - Whitespace
  - - "-"
    - SubtractionOperator
  - - " "
    - Whitespace
  - - R2
    - Identifier
  - - )
    - RightParentheses
  - - " "
    - Whitespace
  - - /
    - DivisionOperator
  - - " "
    - Whitespace
  - - iWidth
    - Identifier
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - VG
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - Abs
    - Identifier
  - - (
    - LeftParentheses
  - - G
    - Identifier
  - - " "
    - Whitespace
  - - "-"
    - SubtractionOperator
  - - " "
    - Whitespace
  - - G2
    - Identifier
  - - )
    - RightParentheses
  - - " "
    - Whitespace
  - - /
    - DivisionOperator
  - - " "
    - Whitespace
  - - iWidth
    - Identifier
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - VB
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - Abs
    - Identifier
  - - (
    - LeftParentheses
  - - B
    - Identifier
  - - " "
    - Whitespace
  - - "-"
    - SubtractionOperator
  - - " "
    - Whitespace
  - - B2
    - Identifier
  - - )
    - RightParentheses
  - - " "
    - Whitespace
  - - /
    - DivisionOperator
  - - " "
    - Whitespace
  - - iWidth
    - Identifier
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "'If the second value is lower then the first value, make the step negative"
    - Comment
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - If
    - IfKeyword
  - - " "
    - Whitespace
  - - R2
    - Identifier
  - - " "
    - Whitespace
  - - "<"
    - LessThanOperator
  - - " "
    - Whitespace
  - - R
    - Identifier
  - - " "
    - Whitespace
  - - Then
    - ThenKeyword
  - - " "
    - Whitespace
  - - VR
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - "-"
    - SubtractionOperator
  - - VR
    - Identifier
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - If
    - IfKeyword
  - - " "
    - Whitespace
  - - G2
    - Identifier
  - - " "
    - Whitespace
  - - "<"
    - LessThanOperator
  - - " "
    - Whitespace
  - - G
    - Identifier
  - - " "
    - Whitespace
  - - Then
    - ThenKeyword
  - - " "
    - Whitespace
  - - VG
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - "-"
    - SubtractionOperator
  - - VG
    - Identifier
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - If
    - IfKeyword
  - - " "
    - Whitespace
  - - B2
    - Identifier
  - - " "
    - Whitespace
  - - "<"
    - LessThanOperator
  - - " "
    - Whitespace
  - - B
    - Identifier
  - - " "
    - Whitespace
  - - Then
    - ThenKeyword
  - - " "
    - Whitespace
  - - VB
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - "-"
    - SubtractionOperator
  - - VB
    - Identifier
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "'Last, run a loop through the width of the picture box, incrementing the color as"
    - Comment
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - "'we go (thus creating a gradient effect)"
    - Comment
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - Dim
    - DimKeyword
  - - " "
    - Whitespace
  - - x
    - Identifier
  - - " "
    - Whitespace
  - - As
    - AsKeyword
  - - " "
    - Whitespace
  - - Long
    - LongKeyword
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - For
    - ForKeyword
  - - " "
    - Whitespace
  - - x
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - "0"
    - Number
  - - " "
    - Whitespace
  - - To
    - ToKeyword
  - - " "
    - Whitespace
  - - iWidth
    - Identifier
  - - "\r\n"
    - Newline
  - - "        "
    - Whitespace
  - - R2
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - R
    - Identifier
  - - " "
    - Whitespace
  - - +
    - AdditionOperator
  - - " "
    - Whitespace
  - - VR
    - Identifier
  - - " "
    - Whitespace
  - - "*"
    - MultiplicationOperator
  - - " "
    - Whitespace
  - - x
    - Identifier
  - - "\r\n"
    - Newline
  - - "        "
    - Whitespace
  - - G2
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - G
    - Identifier
  - - " "
    - Whitespace
  - - +
    - AdditionOperator
  - - " "
    - Whitespace
  - - VG
    - Identifier
  - - " "
    - Whitespace
  - - "*"
    - MultiplicationOperator
  - - " "
    - Whitespace
  - - x
    - Identifier
  - - "\r\n"
    - Newline
  - - "        "
    - Whitespace
  - - B2
    - Identifier
  - - " "
    - Whitespace
  - - "="
    - EqualityOperator
  - - " "
    - Whitespace
  - - B
    - Identifier
  - - " "
    - Whitespace
  - - +
    - AdditionOperator
  - - " "
    - Whitespace
  - - VB
    - Identifier
  - - " "
    - Whitespace
  - - "*"
    - MultiplicationOperator
  - - " "
    - Whitespace
  - - x
    - Identifier
  - - "\r\n"
    - Newline
  - - "        "
    - Whitespace
  - - DstObject
    - Identifier
  - - "."
    - PeriodOperator
  - - Line
    - LineKeyword
  - - " "
    - Whitespace
  - - (
    - LeftParentheses
  - - x
    - Identifier
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - "0"
    - Number
  - - )
    - RightParentheses
  - - "-"
    - SubtractionOperator
  - - (
    - LeftParentheses
  - - x
    - Identifier
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - iHeight
    - Identifier
  - - )
    - RightParentheses
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - RGB
    - Identifier
  - - (
    - LeftParentheses
  - - R2
    - Identifier
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - G2
    - Identifier
  - - ","
    - Comma
  - - " "
    - Whitespace
  - - B2
    - Identifier
  - - )
    - RightParentheses
  - - "\r\n"
    - Newline
  - - "    "
    - Whitespace
  - - Next
    - NextKeyword
  - - " "
    - Whitespace
  - - x
    - Identifier
  - - "\r\n"
    - Newline
  - - End
    - EndKeyword
  - - " "
    - Whitespace
  - - Sub
    - SubKeyword
  - - "\r\n"
    - Newline
  - - ""
    - EOF
